@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: planner.c,v 1.175 2006/01/14 04:37:19 paddy_s Exp $
+ * $Id: planner.c,v 1.176 2006/02/28 12:24:06 martinea Exp $
  *
  * backup schedule planner for the Amanda backup system.
  */
@@ -1137,15 +1137,15 @@ static void get_estimates P((void))
 	if(est(dp)->level[0] != -1 && est(dp)->est_size[0] < 0) {
 	    if(est(dp)->est_size[0] == -1) {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d failed: %lu.",
+			"disk %s:%s, estimate of level %d failed.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[0], est(dp)->est_size[0]);
+			est(dp)->level[0]);
 	    }
 	    else {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d timed out: %lu.",
+			"disk %s:%s, estimate of level %d timed out.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[0], est(dp)->est_size[0]);
+			est(dp)->level[0]);
 	    }
 	    est(dp)->level[0] = -1;
 	}
@@ -1153,15 +1153,15 @@ static void get_estimates P((void))
 	if(est(dp)->level[1] != -1 && est(dp)->est_size[1] < 0) {
 	    if(est(dp)->est_size[1] == -1) {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d failed: %lu.",
+			"disk %s:%s, estimate of level %d failed.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[1], est(dp)->est_size[1]);
+			est(dp)->level[1]);
 	    }
 	    else {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d timed out: %lu.",
+			"disk %s:%s, estimate of level %d timed out.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[1], est(dp)->est_size[1]);
+			est(dp)->level[1]);
 	    }
 	    est(dp)->level[1] = -1;
 	}
@@ -1169,15 +1169,15 @@ static void get_estimates P((void))
 	if(est(dp)->level[2] != -1 && est(dp)->est_size[2] < 0) {
 	    if(est(dp)->est_size[2] == -1) {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d failed: %lu.",
+			"disk %s:%s, estimate of level %d failed.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[2], est(dp)->est_size[2]);
+			est(dp)->level[2]);
 	    }
 	    else {
 		log_add(L_WARNING,
-			"disk %s:%s, estimate of level %d timed out: %lu.",
+			"disk %s:%s, estimate of level %d timed out.",
 			dp->host->hostname, dp->name,
-			est(dp)->level[2], est(dp)->est_size[2]);
+			est(dp)->level[2]);
 	    }
 	    est(dp)->level[2] = -1;
 	}
@@ -1715,23 +1715,23 @@ security_handle_t *sech;
 
 		    if(est(dp)->level[2] != -1 && est(dp)->est_size[2] < 0) {
 			log_add(L_WARNING,
-				"disk %s:%s, estimate of level %d failed: %lu.",
+				"disk %s:%s, estimate of level %d failed.",
 				dp->host->hostname, dp->name,
-				est(dp)->level[2], est(dp)->est_size[2]);
+				est(dp)->level[2]);
 			est(dp)->level[2] = -1;
 		    }
 		    if(est(dp)->level[1] != -1 && est(dp)->est_size[1] < 0) {
 			log_add(L_WARNING,
-				"disk %s:%s, estimate of level %d failed: %lu.",
+				"disk %s:%s, estimate of level %d failed.",
 				dp->host->hostname, dp->name,
-				est(dp)->level[1], est(dp)->est_size[1]);
+				est(dp)->level[1]);
 			est(dp)->level[1] = -1;
 		    }
 		    if(est(dp)->level[0] != -1 && est(dp)->est_size[0] < 0) {
 			log_add(L_WARNING,
-				"disk %s:%s, estimate of level %d failed: %lu.",
+				"disk %s:%s, estimate of level %d failed.",
 				dp->host->hostname, dp->name,
-				est(dp)->level[0], est(dp)->est_size[0]);
+				est(dp)->level[0]);
 			est(dp)->level[0] = -1;
 		    }
 		    enqueue_disk(&estq, dp);
