@@ -1,3 +1,6 @@
+2006-02-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/planner.c: Don't print estimate size if estimate failed.
+
 2006-02-25  Ian Turner <ian@zmanda.com>
 	* man/Makefile.am: Don't use static patterns (as they are not 
 	  portable), use implicit rules instead.
